--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,7 +57,7 @@ body {
 
 .disk p:nth-of-type(3) {
     transform: rotate(-17deg); /*буква e*/
-} /*буква e*/
+} 
 
 .disk p:nth-of-type(4) {
     transform: rotate(-7deg); /* буква r */ 
