--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@ body {
 
 .disk {
     position: relative;
-    border-top: 2px solid #22252c;;
+    border-top: 2px solid #22252c;
     border-left: 2px solid transparent;
     border-right: 2px solid transparent;
     border-bottom: 2px solid transparent; 
